Updated Dutch translation by Wouter Bolsterlee.
2009-02-14  Wouter Bolsterlee  <wbolster@svn.gnome.org>

	* nl.po: Updated Dutch translation by Wouter Bolsterlee.


svn path=/trunk/; revision=14943

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,8 +1,12 @@
+2009-02-14  Wouter Bolsterlee  <wbolster@svn.gnome.org>
+
+	* nl.po: Updated Dutch translation by Wouter Bolsterlee.
+
 2009-02-13 Jorge Gonzalez  <jorgegonz@svn.gnome.org>
 
-	* es.po: Updated Spanish translation 
+	* es.po: Updated Spanish translation
 
-2009-02-13   Clytie Siddall <clytie@riverland.net.au>
+2009-02-13  Clytie Siddall <clytie@riverland.net.au>
 
 	* vi.po: Updated Vietnamese translation.
 
@@ -42,11 +46,11 @@
 
 	* ja.po: Updated Japanese translation.
 
-2009-02-07   Goran Rakić <grakic@devbase.net>
+2009-02-07  Goran Rakić <grakic@devbase.net>
 
 	* sr.po, sr@latin.po: Updated Serbian translation wrt bug #570838.
 
-2009-02-07   Clytie Siddall <clytie@riverland.net.au>
+2009-02-07  Clytie Siddall <clytie@riverland.net.au>
 
 	* vi.po: Updated Vietnamese translation.
 
@@ -70,7 +74,7 @@
 
 	* or.po: Updated Oriya Translation.
 
-2009-02-02  Jorge Gonzalez  <jorgegonz@svn.gnome.org> 
+2009-02-02  Jorge Gonzalez  <jorgegonz@svn.gnome.org>
 
 	* es.po: Updated Spanish translation.
 
@@ -153,7 +157,7 @@
 	* yo.po Added Yoruba translation by Sunday Ayo Fajuyitan.
 	* ha.po: Added Hausa translation by Saudat Mohammed.
 	* LINGUAS: added Igbo, Yoruba and Hausa.
-	
+
 2009-01-17  Jorge Gonzalez  <jorgegonz@svn.gnome.org>
 
 	* es.po: Updated Spanish translation.
@@ -216,7 +220,7 @@
 
 2008-12-15  Alexander Larsson  <alexl@redhat.com>
 
-        * POTFILES.in:
+	* POTFILES.in:
 	* *.po:
 	Imported eel pofiles
 
@@ -230,14 +234,14 @@
 
 2008-12-03  Goran Rakić  <grakic@devbase.net>
 
-        * sr.po, sr@latin.po: Fixed Ubuntu bug lp#197224.
+	* sr.po, sr@latin.po: Fixed Ubuntu bug lp#197224.
 
 === nautilus 2.25.1 ===
-	
+
 2008-12-01  Alexander Larsson  <alexl@redhat.com>
 
-        * POTFILES.in:
-        * POTFILES.skip:
+	* POTFILES.in:
+	* POTFILES.skip:
 	Update
 
 2008-11-11  Mark Krapivner  <mark125@gmail.com>
@@ -255,11 +259,11 @@
 
 2008-11-09  Goran Rakić  <grakic@devbase.net>
 
-        * sr.po, sr@latin.po: Updated Serbian Translation (by Miloš Popović).
+	* sr.po, sr@latin.po: Updated Serbian Translation (by Miloš Popović).
 
 2008-11-08  Jorge Gonzalez  <jorgegonz@svn.gnome.org>
 
-	* es.po: Updated Spanish translation.   
+	* es.po: Updated Spanish translation.
 
 2008-11-08  Inaki Larranaga Murgoitio  <dooteo@euskalgnu.org>
 
@@ -289,8 +293,8 @@
 
 2008-10-23  Andre Klapper  <a9016009@gmx.de>
 
-        * LINGUAS: Added ast.
-        * ast.po: Added Asturian translation on behalf of Mikel González.
+	* LINGUAS: Added ast.
+	* ast.po: Added Asturian translation on behalf of Mikel González.
 
 2008-10-20  Jordi Mallach  <jordi@sindominio.net>
 
@@ -327,8 +331,8 @@
 	* sq.po: Updated Albanian Translation.
 
 2008-09-25  Jovan Naumovski  <jovan@lugola.net>
- 
- 	* mk.po: Updated Macedonian translation.
+
+	* mk.po: Updated Macedonian translation.
 
 2008-09-22  Goran Rakić  <grakic@devbase.net>
 
@@ -400,7 +404,7 @@
 	* zh_HK.po: Updated Traditional Chinese translation(Hong Kong).
 	* zh_TW.po: Updated Traditional Chinese translation(Taiwan).
 
-2008-09-18  Djihed Afifi <djihed@gmail.com> 
+2008-09-18  Djihed Afifi <djihed@gmail.com>
 
 	* ar.po: Updated Arabic Translation by Anas Afif Emad.
 
@@ -408,7 +412,7 @@
 
 	* lt.po: Updated Lithuanian translation.
 
-2008-09-15  Djihed Afifi <djihed@gmail.com> 
+2008-09-15  Djihed Afifi <djihed@gmail.com>
 
 	* ar.po: Updated Arabic Translation by Anas Afif Emad.
 
@@ -443,7 +447,7 @@
 
 2008-09-12  Reinout van Schouwen <reinouts@gnome.org>
 
-        * nl.po: Translation updated by Reinout van Schouwen.
+	* nl.po: Translation updated by Reinout van Schouwen.
 
 2008-09-11  Hendrik Richter  <hendrikr@gnome.org>
 
@@ -480,7 +484,7 @@
 2008-09-09 Baris Cicek <baris@teamforce.name.tr>
 
 	* tr.po: Updated Turkish translation
-	
+
 2008-09-08  Changwoo Ryu  <cwryu@debian.org>
 
 	* ko.po: Updated Korean translation by Young-Ho Cha.
@@ -553,7 +557,7 @@
 
 2008-09-01  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>
 
-	 gl.po: Updated Galician translation
+	* gl.po: Updated Galician translation
 
 2008-09-01  Gil Forcada <gforcada@gnome.org>
 
@@ -585,7 +589,7 @@
 
 2008-08-30  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>
 
-	 gl.po: Updated Galician translation
+	* gl.po: Updated Galician translation
 
 2008-08-30  Inaki Larranaga Murgoitio  <dooteo@euskalgnu.org>
 
@@ -637,7 +641,7 @@
 
 2008-08-26  Jorge Gonzalez  <jorgegonz@svn.gnome.org>
 
-	* es.po: Updated Spanish translation                                   
+	* es.po: Updated Spanish translation
 
 2008-08-25  Inaki Larranaga Murgoitio  <dooteo@euskalgnu.org>
 
@@ -645,11 +649,11 @@
 
 2008-08-25  Goran Rakic  <grakic@devbase.net>
 
-        * LINGUAS, sr@latin.po, sr@Latn.po: Conversion from sr@Latn to sr@latin.
+	* LINGUAS, sr@latin.po, sr@Latn.po: Conversion from sr@Latn to sr@latin.
 
 2008-08-25  Jovan Naumovski  <jovan@lugola.net>
- 
- 	* mk.po: Updated Macedonian translation.
+
+	* mk.po: Updated Macedonian translation.
 
 2008-08-24  Takeshi AIHANA <takeshi.aihana@gmail.com>
 
@@ -661,19 +665,19 @@
 
 2008-08-21  Shankar Prasad  <svenkate@redhat.com>
 
-        * kn.po: Updated Kannada translations.
+	* kn.po: Updated Kannada translations.
 
 2008-08-20  Shankar Prasad  <svenkate@redhat.com>
 
-        * kn.po: Updated Kannada translations.
+	* kn.po: Updated Kannada translations.
 
 2008-08-20  Shankar Prasad  <svenkate@redhat.com>
 
-        * kn.po: Updated Kannada translations.
+	* kn.po: Updated Kannada translations.
 
 2008-08-19  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>
 
-	 gl.po: Updated Galician translation
+	* gl.po: Updated Galician translation
 
 2008-08-19  Jorge Gonzalez  <jorgegonz@svn.gnome.org>
 
@@ -681,7 +685,7 @@
 
 2008-08-19  Shankar Prasad  <svenkate@redhat.com>
 
-        * kn.po: Updated Kannada translations.
+	* kn.po: Updated Kannada translations.
 
 2008-08-19  Luca Ferretti  <elle.uca@libero.it>
 
@@ -694,7 +698,7 @@
 
 2008-08-17  Jorge Gonzalez  <jorgegonz@svn.gnome.org>
 
-	* es.po: Updated Spanish translation  
+	* es.po: Updated Spanish translation
 
 2008-08-17  Kjartan Maraas  <kmaraas@gnome.org>
 
@@ -706,7 +710,7 @@
 
 2008-08-16  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>
 
-	 gl.po: Updated Galician translation
+	* gl.po: Updated Galician translation
 
 2008-08-16  Theppitak Karoonboonyanan  <thep@linux.thai.net>
 
@@ -739,7 +743,7 @@
 
 2008-08-13  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>
 
-	 gl.po: Updated Galician translation
+	* gl.po: Updated Galician translation
 
 2008-08-12  Ilkka Tuohela <hile@iki.fi>
 
@@ -771,13 +775,13 @@
 
 2008-08-06  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>
 
-	 gl.po: Updated Galician translation
+	* gl.po: Updated Galician translation
 
 2008-08-06  Daniel Nylander <po@danielnylander.se>
 
 	* sv.po: Updated Swedish translation.
 
-2008-08-6  Djihed Afifi <djihed@gmail.com> 
+2008-08-6  Djihed Afifi <djihed@gmail.com>
 
 	* ar.po: Updated Arabic Translation by Khaled Hosny.
 
@@ -805,7 +809,7 @@
 
 	* zh_CN.po: Updated zh_CN translation.
 
-2008-07-29  Djihed Afifi <djihed@gmail.com> 
+2008-07-29  Djihed Afifi <djihed@gmail.com>
 
 	* ar.po: Updated Arabic Translation by Khaled Hosny.
 
@@ -932,11 +936,11 @@
 
 	* gl.po: Updated Galician Translation.
 
-2008-06-14  Jorge Gonzalez  <jorgegonz@svn.gnome.org>  
+2008-06-14  Jorge Gonzalez  <jorgegonz@svn.gnome.org>
 
 	* es.po: Updated Spanish translation
 
-2008-06-11  Djihed Afifi <djihed@gmail.com> 
+2008-06-11  Djihed Afifi <djihed@gmail.com>
 
 	* ar.po: Updated Arabic Translation by Khaled Hosny.
 
@@ -957,20 +961,20 @@
 	* nb.po: Updated Norwegian bokmål translation.
 
 2008-06-05  Yannig Marchegay  <yannig@marchegay.org>
- 
- 	* oc.po: Updated Occitan translation.
+
+	* oc.po: Updated Occitan translation.
 
 2008-06-05  Roozbeh Pournader  <roozbeh@gmail.com>
 
 	* fa.po: Fixed a bad message in Persian translation (fixes
-	  bug #511623, reported by Hedayat Vatankhah, patch by
-	  Elnaz Sarbar)
+	bug #511623, reported by Hedayat Vatankhah, patch by
+	Elnaz Sarbar)
 
 ==================== 2.23.3 ====================
 
 2008-06-01  Jovan Naumovski  <jovan@lugola.net>
- 
- 	* mk.po: Updated Macedonian translation.
+
+	* mk.po: Updated Macedonian translation.
 
 2008-06-02   Clytie Siddall <clytie@riverland.net.au>
 
@@ -996,7 +1000,7 @@
 
 	* nb.po: Updated Norwegian bokmål translation.
 
-2008-05-19  Djihed Afifi <djihed@gmail.com> 
+2008-05-19  Djihed Afifi <djihed@gmail.com>
 
 	* ar.po: Updated Arabic Translation by Djihed Afifi.
 
@@ -1006,7 +1010,7 @@
 
 === nautilus 2.23.2 ===
 
-2008-05-10  Jorge Gonzalez  <jorgegonz@svn.gnome.org>   
+2008-05-10  Jorge Gonzalez  <jorgegonz@svn.gnome.org>
 
 	* es.po: Updated Spanish translation
 
@@ -1052,8 +1056,8 @@
 
 2008-04-23  Jorge Gonzalez  <jorgegonz@svn.gnome.org>
 
-        * es.po: Updated Spanish translation by Alberto Caso, fixes LP bug  
-          #197224
+	* es.po: Updated Spanish translation by Alberto Caso,
+	fixes LP bug #197224
 
 2008-04-22  Kjartan Maraas  <kmaraas@gnome.org>
 
@@ -1109,7 +1113,7 @@
 
 	* nn.po: Updated Norwegian Nynorsk translation
 
-2008-03-30  Jorge Gonzalez  <jorgegonz@svn.gnome.org>  
+2008-03-30  Jorge Gonzalez  <jorgegonz@svn.gnome.org>
 
 	* es.po: Updated Spanish translation
 
@@ -1197,7 +1201,7 @@
 
 	* tr.po: Updated Turkish translation.
 
-2008-03-08  Djihed Afifi <djihed@gmail.com> 
+2008-03-08  Djihed Afifi <djihed@gmail.com>
 
 	* ar.po: Updated Arabic Translation by Djihed Afifi.
 
@@ -1215,7 +1219,7 @@
 
 2008-03-07  Andre Klapper  <a9016009@gmx.de>
 
-	* cs.po: Updated Czech translation on behalf of 
+	* cs.po: Updated Czech translation on behalf of
 	Lucas Lommer.
 
 2008-03-07  Sunil Mohan Adapa  <sunilmohan@fsf.org.in>
@@ -1284,7 +1288,7 @@
 2008-03-03  Reinout van Schouwen <reinouts@gnome.org>
 
 	* nl.po: Translation updated by Reinout van Schouwen.
-	
+
 2008-03-03  Philip Withnall  <pwithnall@svn.gnome.org>
 
 	* en_GB.po: Updated British English translation.
@@ -1322,9 +1326,9 @@
 
 	* it.po: Updated Italian translation.
 
-2008-02-28  Jorge Gonzalez  <jorgegonz@svn.gnome.org> 
+2008-02-28  Jorge Gonzalez  <jorgegonz@svn.gnome.org>
 
-	* es.po: Updated Spanish translation  
+	* es.po: Updated Spanish translation
 
 2008-02-28  Hendrik Richter  <hendrikr@gnome.org>
 
@@ -1354,7 +1358,7 @@
 
 	* ca.po: Updated Catalan translation by Joan Duran.
 
-2008-02-27  Djihed Afifi <djihed@gmail.com> 
+2008-02-27  Djihed Afifi <djihed@gmail.com>
 
 	* ar.po: Updated Arabic Translation by Abdelmonam Kouka.
 
@@ -1364,13 +1368,13 @@
 
 2008-02-27 Arangel Angov <arangel@linux.net.mk>
 
-        * mk.po: Updated Macedonian translation.
+	* mk.po: Updated Macedonian translation.
 
 2008-02-26  Leonardo Ferreira Fontenelle  <leonardof@svn.gnome.org>
 
 	* pt_BR.po: Brazilian Portuguese translation updated by Vladimir Melo.
 
-2008-02-26  Djihed Afifi <djihed@gmail.com> 
+2008-02-26  Djihed Afifi <djihed@gmail.com>
 
 	* ar.po: Updated Arabic Translation by Abdelmonam Kouka.
 
@@ -1425,7 +1429,7 @@
 
 2008-02-22 Arangel Angov <arangel@linux.net.mk>
 
-        * mk.po: Updated Macedonian translation.
+	* mk.po: Updated Macedonian translation.
 
 2008-02-21  Stéphane Raimbault  <stephane.raimbault@gmail.com>
 
@@ -1455,7 +1459,7 @@
 2008-02-21  Funda Wang  <fundawang@gmail.com>
 
 	* zh_CN.po: Update Simplified Chinese translation.
-	
+
 2008-02-20  Duarte Loreto <happyguy_pt@hotmail.com>
 
 	* pt.po: Updated Portuguese translation.
@@ -1476,7 +1480,7 @@
 
 	* ko.po: Updated Korean translation by Young-Ho Cha.
 
-2008-02-19  Djihed Afifi <djihed@gmail.com> 
+2008-02-19  Djihed Afifi <djihed@gmail.com>
 
 	* ar.po: Updated Arabic Translation by Abdelmonam Kouka.
 
@@ -1486,7 +1490,7 @@
 
 2008-02-19  Alexander Larsson  <alexl@redhat.com>
 
-        * POTFILES.in:
+	* POTFILES.in:
 	Removed nautilus-file-operations-progress.c
 
 2008-02-18  Hendrik Richter  <hendrikr@gnome.org>
@@ -1519,7 +1523,7 @@
 
 2008-02-16 Arangel Angov <arangel@linux.net.mk>
 
-        * mk.po: Updated Macedonian translation.
+	* mk.po: Updated Macedonian translation.
 
 2008-02-14  Jorge Gonzalez  <jorgegonz@svn.gnome.org>
 
@@ -1566,7 +1570,7 @@
 
 2008-02-10  Vasiliy Faronov  <qvvx@yandex.ru>
 
-        * ru.po: Updated Russian translation.
+	* ru.po: Updated Russian translation.
 
 2008-02-10  Duarte Loreto <happyguy_pt@hotmail.com>
 
@@ -1586,7 +1590,7 @@
 
 2008-02-08  Jorge Gonzalez  <jorgegonz@svn.gnome.org>
 
-	* es.po: Updated Spanish translation    
+	* es.po: Updated Spanish translation
 
 2008-02-07  Artur Flinta  <aflinta@svn.gnome.org>
 
@@ -1598,7 +1602,7 @@
 
 2008-02-06  Alexander Larsson  <alexl@redhat.com>
 
-        * it.po:
+	* it.po:
 	Fix mistranslation (#510308)
 
 2008-02-05  Yair Hershkovitz  <yairhr@gmail.com>
@@ -1637,7 +1641,7 @@
 
 	* kn.po: Updated Kannada Translations by Shankar Prasad.
 
-2008-01-31  Djihed Afifi <djihed@gmail.com> 
+2008-01-31  Djihed Afifi <djihed@gmail.com>
 
 	* ar.po: Updated Arabic Translation by Khaled Hosny.
 
@@ -1655,7 +1659,7 @@
 
 2008-01-29  Jorge Gonzalez  <jorgegonz@svn.gnome.org>
 
-	* es.po: Updated Spanish translation   
+	* es.po: Updated Spanish translation
 
 2008-01-29  Jonh Wendell  <jwendell@gnome.org>
 
@@ -1675,7 +1679,7 @@
 
 	* es.po: Updated Spanish translation
 
-2008-01-27  Djihed Afifi <djihed@gmail.com> 
+2008-01-27  Djihed Afifi <djihed@gmail.com>
 
 	* ar.po: Updated Arabic Translation by Khaled Hosny.
 
@@ -1719,8 +1723,8 @@
 
 2008-01-21  Alexander Larsson  <alexl@redhat.com>
 
-        * POTFILES.in:
-        * POTFILES.skip:
+	* POTFILES.in:
+	* POTFILES.skip:
 	Add new files
 
 2008-01-21  Changwoo Ryu  <cwryu@debian.org>
@@ -1745,7 +1749,7 @@
 
 2008-01-16  Sunil Mohan Adapa  <sunil@atc.tcs.com>
 
-	* te.po: Updated Telugu translation done by 
+	* te.po: Updated Telugu translation done by
 	Krishna Babu K <kkrothap@redhat.com>.
 
 2008-01-15  Luca Ferretti  <elle.uca@libero.it>
@@ -1768,7 +1772,7 @@
 
 2008-01-14  Alexander Larsson  <alexl@redhat.com>
 
-        * POTFILES.in:
+	* POTFILES.in:
 	Add nautilus-autorun.c
 
 2008-01-14  Kjartan Maraas  <kmaraas@gnome.org>
@@ -1797,7 +1801,7 @@
 
 2008-01-09  Alexander Larsson  <alexl@redhat.com>
 
-        * POTFILES.skip:
+	* POTFILES.skip:
 	Add the removed connect to server files
 	to skip instead
 
@@ -1832,11 +1836,11 @@
 	* ga.po: Updated Irish translation.
 	* POTFILES.in: Add missing files.
 
-2007-12-26  Djihed Afifi <djihed@gmail.com> 
+2007-12-26  Djihed Afifi <djihed@gmail.com>
 
 	* ar.po: Updated Arabic Translation by Djihed Afifi.
 
-2007-12-24  Djihed Afifi <djihed@gmail.com> 
+2007-12-24  Djihed Afifi <djihed@gmail.com>
 
 	* ar.po: Updated Arabic Translation by Abou Manal.
 
@@ -1857,14 +1861,14 @@
 
 2007-12-16  Jorge Gonzalez  <jorgegonz@svn.gnome.org>
 
-        * es.po: Updated Spanish translation
+	* es.po: Updated Spanish translation
 
 2007-12-11  Jorge Gonzalez  <jorgegonz@svn.gnome.org>
 
-        * es.po: Updated Spanish translation
+	* es.po: Updated Spanish translation
 
 2007-12-11 Rahul Balerao <b.rahul.pm@gmail.com>
-	
+
 	* mr.po: Added Marathi translations given by Sandeep Shedmake
 	* LINGUAS: Added an entry for mr.
 
@@ -1906,7 +1910,7 @@
 
 2007-12-01  Jorge Gonzalez  <jorgegonz@svn.gnome.org>
 
-        * es.po: Updated Spanish translation
+	* es.po: Updated Spanish translation
 
 2007-12-01  Urbančič Matej <mateju@svn.gnome.org>
 
@@ -1922,8 +1926,8 @@
 
 2007-11-25  Nickolay V. Shmyrev  <nshmyrev@yandex.ru>
 
-        * ru.po: Updated Russian translation
-        by Vasiliy Faronov <qvvx@yandex.ru>
+	* ru.po: Updated Russian translation
+	by Vasiliy Faronov <qvvx@yandex.ru>
 
 2007-11-21  Gil Forcada  <gforcada@svn.gnome.org>
 
@@ -1941,9 +1945,9 @@
 
 	* sv.po: Updated Swedish translation.
 
-2007-11-06  Jorge Gonzalez <jorgegonz@svn.gnome.org>   
+2007-11-06  Jorge Gonzalez <jorgegonz@svn.gnome.org>
 
-        * es.po: Updated Spanish translation
+	* es.po: Updated Spanish translation
 
 2007-11-06  Ihar Hrachyshka <ihar.hrachyshka@gmail.com>
 
@@ -1966,11 +1970,11 @@
 
 	* be@latin.po: Updated Belarusian Latin translation.
 
-2007-10-23  Djihed Afifi <djihed@gmail.com> 
+2007-10-23  Djihed Afifi <djihed@gmail.com>
 
 	* ar.po: Updated Arabic Translation by Sohaib Afifi.
 
-2007-10-21  Djihed Afifi <djihed@gmail.com> 
+2007-10-21  Djihed Afifi <djihed@gmail.com>
 
 	* ar.po: Updated Arabic Translation by Sohaib Afifi.
 
@@ -2088,7 +2092,7 @@
 
 2007-09-07  Jovan Naumovski  <jovan@lugola.net>
 
-	 * mk.po: Updated Macedonian translation.
+	* mk.po: Updated Macedonian translation.
 
 2007-09-03  Andre Klapper  <a9016009@gmx.de>
 
@@ -2104,7 +2108,7 @@
 
 2007-09-02  Jovan Naumovski  <jovan@lugola.net>
 
-	 * mk.po: Updated Macedonian translation.
+	* mk.po: Updated Macedonian translation.
 
 2007-08-29  I. Felix <ifelix@svn.gnome.org>
 
@@ -2215,7 +2219,7 @@
 
 2007-08-12  Jovan Naumovski  <jovan@lugola.net>
 
-	 * mk.po: Updated Macedonian translation.
+	* mk.po: Updated Macedonian translation.
 
 2007-08-09  Theppitak Karoonboonyanan  <thep@linux.thai.net>
 
@@ -2361,7 +2365,7 @@
 
 2007-07-03  Jovan Naumovski  <jovan@lugola.net>
 
-	 * mk.po: Updated Macedonian translation.
+	* mk.po: Updated Macedonian translation.
 
 2007-07-02  Nguyễn Thái Ngọc Duy <pclouds@gmail.com>
 
@@ -2407,7 +2411,7 @@
 2007-06-26  Guilherme de S. Pastore  <gpastore@gnome.org>
 
 	* ja.po: Fixed typo (Sitcky -> Sticky) in the Japanese translation,
-	  as reported by Kobayashi Noritada on the Debian BTS.
+	as reported by Kobayashi Noritada on the Debian BTS.
 
 2007-06-23  Kjartan Maraas  <kmaraas@gnome.org>
 
@@ -2589,7 +2593,7 @@
 
 2007-03-17  Jovan Naumovski  <jovan@lugola.net>
 
-	 * mk.po: Updated Macedonian translation.
+	* mk.po: Updated Macedonian translation.
 
 2007-03-17  Stéphane Raimbault  <stephane.raimbault@gmail.com>
 
@@ -4889,7 +4893,7 @@
 2005-07-31  Ilkka Tuohela  <hile@iki.fi>
 
 	* fi.po: Bulk updates to Finnish translation
-	 for new gnome.fi website.
+	for new gnome.fi website.
 
 2005-07-31  Pawan Chitrakar  <pawan@nplinux.org>
 
@@ -5373,7 +5377,7 @@
 
 2005-03-29  Adi Attar  <aattar@cvs.gnome.org>
 
-	 xh.po: Updated Xhosa translation.
+	* xh.po: Updated Xhosa translation.
 
 2005-03-28  Abel Cheung  <maddog@linuxhall.org>
 
@@ -5419,7 +5423,7 @@
 2005-03-16  Roozbeh Pournader  <roozbeh@farsiweb.info>
 
 	* fa.po: Updated Persian translation by
-	  Behnam Pournader <bp@farsiweb.info>.
+	Behnam Pournader <bp@farsiweb.info>.
 
 2005-03-14  Martin Willemoes Hansen  <mwh@sysrq.dk>
 
@@ -5534,7 +5538,7 @@
 
 2005-02-18  Pauli Virtanen <pauli.virtanen@hut.fi>
 
-	 * fi.po: Updated Finnish translation.
+	* fi.po: Updated Finnish translation.
 
 2005-02-18  Kostas Papadimas <pkst@gnome.org>
 
@@ -5656,7 +5660,7 @@
 
 2005-02-06  Pauli Virtanen <pauli.virtanen@hut.fi>
 
-	 * fi.po: Updated Finnish translation.
+	* fi.po: Updated Finnish translation.
 
 2005-02-05  Kostas Papadimas <pkst@gnome.org>
 
@@ -6024,7 +6028,7 @@
 2004-11-09  Gustavo Noronha Silva  <kov@debian.org>
 
 	* pt_BR.po: fixed strings which had mnemonics but
-	  should not (fix up-ported from gnome-2-8 branch)
+	should not (fix up-ported from gnome-2-8 branch)
 	- Fixes http://bugzilla.gnome.org/show_bug.cgi?id=157252
 
 === nautilus 2.8.2 ===
@@ -6616,7 +6620,7 @@
 2004-07-08  Gustavo Noronha Silva  <kov@debian.org>
 
 	* pt_BR.po: translation update by
-	  "Raphael Higino" <raphaelh@uai.com.br>
+	"Raphael Higino" <raphaelh@uai.com.br>
 
 2004-07-08  Miloslav Trmac  <mitr@volny.cz>
 
@@ -7186,7 +7190,7 @@
 2004-03-03  Jody Goldberg <jody@gnome.org>
 
 	* ar.po : remove semi-duplicated message that was breaking the build.
-	  Was gettext on crack ? or was that really a duplicate.
+	Was gettext on crack ? or was that really a duplicate.
 
 2004-03-04  Funda Wang  <fundawang@linux.net.cn>
 
@@ -7195,7 +7199,7 @@
 2004-03-03  Guntupalli Karunakar  <karunakar@freedomink.org>
 
 	* pa.po: Added Punjabi translation by
-	 Amanpreet Singh Alam <amanlinux@netscape.net>.
+	Amanpreet Singh Alam <amanlinux@netscape.net>.
 
 2004-03-3  Arafat Medini  <lumina@silverpen.de>
 
@@ -7509,7 +7513,7 @@
 
 2004-02-07  Robert Sedak  <robert.sedak@sk.htnet.hr>
 
-	 * hr.po: Updated Croatian translation.
+	* hr.po: Updated Croatian translation.
 
 2004-02-08  Changwoo Ryu  <cwryu@debian.org>
 
@@ -7857,7 +7861,7 @@
 2003-12-22  Gustavo Noronha Silva  <kov@debian.org>
 
 	* pt_BR.po: updated translation and tried to have
-	  some translations more standardized.
+	some translations more standardized.
 
 2003-12-21  Christian Neumair  <chris@gnome-de.org>
 
@@ -7990,14 +7994,14 @@
 2003-11-10  Pablo Gonzalo del Campo  <pablodc@bigfoot.com>
 
 	* es.po: Updated Spanish translation by
-	 Francisco Javier F. Serrador <serrador@arrakis.es>.
+	Francisco Javier F. Serrador <serrador@arrakis.es>.
 
 === nautilus 2.5.1 ===
 
 2003-11-09  Abel Cheung  <maddog@linux.org.hk>
 
 	* POTFILES.in: Removed non-existant file and added
-	  2 new .desktop.in.
+	2 new .desktop.in.
 
 2003-11-09  Christian Rose  <menthos@menthos.com>
 
@@ -8164,7 +8168,7 @@
 2003-08-27  Pablo Gonzalo del Campo  <pablodc@bigfoot.com>
 
 	* es.po: Revision of Spanish translation by
-	 Francisco Javier F. Serrador <serrador@arrakis.es>.
+	Francisco Javier F. Serrador <serrador@arrakis.es>.
 
 2003-08-27  Vincent van Adrighem  <V.vanAdrighem@dirck.mine.nu>
 
@@ -8686,7 +8690,7 @@
 2003-05-27  Abel Cheung  <maddog@linux.org.hk>
 
 	* POTFILES.in: Remove non-existant file(s), add missing files from
-	  libnautilus-private/.
+	libnautilus-private/.
 	* POTFILES.skip: Remove non-existant file(s).
 
 2003-05-26  Pablo Saratxaga  <pablo@mandrakesoft.com>
@@ -9360,7 +9364,7 @@
 2003-01-19  Abel Cheung  <maddog@linux.org.hk>
 
 	* zh_TW.po: Updated traditional Chinese translation, and used correct
-	  copyright symbol.
+	copyright symbol.
 
 2003-01-19  Stanislav Visnovsky <visnovsky@nenya.ms.mff.cuni.cz>
 
@@ -9748,7 +9752,7 @@
 2002-12-03  Yuriy Syrota <rastaman@renome.rovno.ua>
 
 	* uk.po: Ukrainian translation updated by
-	  Maxim Dzumanenko <mvd@mylinux.com.ua>
+	Maxim Dzumanenko <mvd@mylinux.com.ua>
 
 2002-12-01  Pauli Virtanen <pauli.virtanen@hut.fi>
 
@@ -10121,7 +10125,7 @@
 2002-07-26  Gustavo Noronha Silva <kov@debian.org>
 
 	* pt_BR.po: Updated Brazilian translation,
-	  by Evandro Fernandes Giovanini <evandrofg@ig.com.br>.
+	by Evandro Fernandes Giovanini <evandrofg@ig.com.br>.
 
 2002-07-25  Ole Laursen  <olau@hardworking.dk>
 
@@ -10340,7 +10344,7 @@
 2002-06-16  Vincent van Adrighem <V.vanAdrighem@dirck.mine.nu>
 
 	* nl.po: Reinout van Schouwen updated the Dutch translation.
-	  Sorry for the delay Reinout...
+	Sorry for the delay Reinout...
 
 2002-06-16  Christophe Merlet  <christophe@merlet.net>
 
@@ -11075,7 +11079,7 @@ Mon Jun 03 14:18:51 2002  George Lebl <jirka@5z.com>
 2002-01-23  Roy-Magne Mo  <rmo@sunnmore.net>
 
 	* nn.po: Using translation from nautilus 1.0
-		 and converted it to UTF-8
+	and converted it to UTF-8
 
 2002-01-22  Christian Rose  <menthos@menthos.com>
 
@@ -11980,9 +11984,9 @@ Tue Apr 17 22:31:07 2001  George Lebl <jirka@5z.com>
 Mon Apr 16 08:06:45 2001  George Lebl <jirka@5z.com>
 
 	* cs.po:  I'm too tired to code and have a couple of ours to
-	  kill instead of going to sleep, so here's another bunch of
-	  translations, now up to like 28% translated.  Damn there is
-	  a lot of strings in nautilus.
+	kill instead of going to sleep, so here's another bunch of
+	translations, now up to like 28% translated.  Damn there is
+	a lot of strings in nautilus.
 
 2001-04-16  Zbigniew Chyla  <cyba@gnome.pl>
 
@@ -12832,7 +12836,7 @@ Mon Apr 16 08:06:45 2001  George Lebl <jirka@5z.com>
 2001-01-19  Carlos Perell?? Mar??n <carlos@gnome-db.org>
 
 	* es.po: Updated Spanish translation from Pablo del
-	  Campo <pablodc@mapfre.com.ar>
+	Campo <pablodc@mapfre.com.ar>
 
 2001-01-19  Stanislav Visnovsky  <visnovsky@nenya.ms.mff.cuni.cz>
 
@@ -13960,7 +13964,7 @@ Mon Apr 16 08:06:45 2001  George Lebl <jirka@5z.com>
 
 	* ko.po : Updated Korean translation from
 
-	  Young-Ho Cha <ganadist@dacome.co.kr>.
+	Young-Ho Cha <ganadist@dacome.co.kr>.
 
 2000-05-08  Andreas Hyden  <a.hyden@cyberpoint.se>
 
@@ -13997,7 +14001,7 @@ Mon Apr 16 08:06:45 2001  George Lebl <jirka@5z.com>
 
 	* ko.po : Added Korean translation by :
 
-	  Young-Ho Cha <ganadist@dacome.co.kr>
+	Young-Ho Cha <ganadist@dacome.co.kr>
 
 2000-05-02  Kjartan Maraas  <kmaraas@online.no>
 
