--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2009-02-14  Ihar Hrachyshka <booxter@lacinka.org>
+
+	* be@latin.po: Updated Belarusian Latin translation by Ihar
+	Hrachyshka.
+
 2009-02-14  Daniel Nylander <po@danielnylander.se>
 
 	* sv.po: Updated Swedish translation.
