--- a/po/es.po
+++ b/po/es.po
@@ -24,8 +24,8 @@ msgstr ""
 "Project-Id-Version: eel.HEAD.es\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/enter_bug.cgi?"
 "product=nautilus&component=general\n"
-"POT-Creation-Date: 2009-02-12 23:05+0000\n"
-"PO-Revision-Date: 2009-02-13 21:46+0100\n"
+"POT-Creation-Date: 2009-02-13 20:46+0000\n"
+"PO-Revision-Date: 2009-02-14 17:48+0100\n"
 "Last-Translator: Jorge González <jorgegonz@svn.gnome.org>\n"
 "Language-Team: Español <gnome-es-list@gnome.org>\n"
 "MIME-Version: 1.0\n"
@@ -568,21 +568,23 @@ msgid ""
 msgstr ""
 "Una cadena que especifica cómo se deberían reemplazar las partes de los "
 "nombres de archivos largos por elipsis dependiendo del nivel de ampliación. "
-"Cada una de las entradas de la lista es de la forma «Nivel de ampliación:"
-"Entero». Para cada nivel de ampliación especificado, si el entero es mayor "
-"que 0, el nombre del archivo no superará el número de líneas dado. Si el "
-"número es 0 o menor no se impone límite en el número de líneas mostradas en "
-"el nivel de ampliación especificado. También se permite una entrada "
-"predeterminada para la forma «Entero» sin especificar el nivel de ampliación. "
-"Define el máximo numero de líneas para el resto de niveles de ampliación. "
-"Ejemplos: 0 - siempre mostrar los nombres de archivo largos; 3 - acortar "
-"nombres de archivo si superan las tres líneas; mas pequeño:5,muy pequeño:4 - "
-"acorta los nombres de archivo si superan las cinco líneas en el nivel de "
-"ampliación «más pequeño» y si superan las cuatro líneas para el nivel de "
-"ampliación «pequeño». No acorta los nombres de archivo para otros niveles de "
-"ampliación. Niveles de ampliaión disponibles: más pequeño (33%), muy pequeño "
-"(50%), pequeño (66%), estándar (100%), grande (150%), muy grande (200%), más "
-"grande (400%)."
+"Cada una de las entradas de la lista es de la forma \"Zoom Level:Integer"
+"\" (Nivel de ampliación:Entero). Para cada nivel de ampliación especificado, "
+"si el entero es mayor que 0, el nombre del archivo no superará el número de "
+"líneas dado. Si el número es 0 o menor no se impone límite en el número de "
+"líneas mostradas en el nivel de ampliación especificado. También se permite "
+"una entrada predeterminada para la forma \"Integer\" (Entero) sin "
+"especificar el nivel de ampliación. Define el máximo numero de líneas para "
+"el resto de niveles de ampliación. Ejemplos: 0 - siempre mostrar los nombres "
+"de archivo largos; 3 - acortar nombres de archivo si superan las tres "
+"líneas; mas pequeño:5,muy pequeño:4 - acorta los nombres de archivo si "
+"superan las cinco líneas en el nivel de ampliación \"smallest\" (más "
+"pequeño) y si superan las cuatro líneas para el nivel de ampliación \"smaller"
+"\" (pequeño). No acorta los nombres de archivo para otros niveles de "
+"ampliación. Niveles de ampliación disponibles: \"smallest\" (más pequeño) "
+"(33%), \"smaller\" (muy pequeño) (50%), \"small\" (pequeño) (66%), \"standard"
+"\" (estándar) (100%), \"large\" (grande) (150%), \"larger\" (muy grande) "
+"(200%), \"largest\" (más grande) (400%)."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:7
 msgid "All columns have same width"
@@ -1211,10 +1213,11 @@ msgid ""
 msgstr ""
 "Compensación de velocidad para cuando se hace una reproducción previa de un "
 "archivo de sonido al colocar el ratón sobre los iconos de los archivos. Si "
-"está definido como «always» entonces se reproducirá el sonido, aún si el "
-"archivo se encuentra en un servidor remoto. Si se establece a «local_only» "
-"entonces la reproducción previa sólo se realizará sobre archivos locales. Si "
-"se establece a «never» entonces nunca de reproducirá previamente el sonido."
+"está definido como \"always\" (siempre) entonces se reproducirá el sonido, "
+"aún si el archivo se encuentra en un servidor remoto. Si se establece a "
+"\"local_only\" (sólo local) entonces la reproducción previa sólo se "
+"realizará sobre archivos locales. Si se establece a \"never\" (nunca) "
+"entonces nunca de reproducirá previamente el sonido."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:109
 msgid ""
@@ -1225,11 +1228,12 @@ msgid ""
 "read preview data."
 msgstr ""
 "Compensación de velocidad para cuando se muestran previamente los contenidos "
-"de un archivo de texto en el icono del archivo. Si se establece a «always» "
-"entonces siempre se mostrará una vista previa, aún si la carpeta se "
-"encuentra en un servidor remoto. Si se establece a «local_only» entonces sólo "
-"se previsualizará en los sistemas de archivos locales. Si se establece a "
-"«never» entonces nunca se leerán datos para la vista previa."
+"de un archivo de texto en el icono del archivo. Si se establece a \"always"
+"\" (siempre) entonces siempre se mostrará una vista previa, aún si la "
+"carpeta se encuentra en un servidor remoto. Si se establece a \"local_only"
+"\" (sólo local) entonces sólo se previsualizará en los sistemas de archivos "
+"locales. Si se establece a \"never\" (siempre) entonces nunca se leerán "
+"datos para la vista previa."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:110
 msgid ""
@@ -1240,11 +1244,12 @@ msgid ""
 "generic icon."
 msgstr ""
 "Compensación de velocidad para cuando se muestran archivos de imágenes como "
-"una miniatura. Si se establece a «always» entonces siempre se mostrarán "
-"miniaturas, aún cuando la carpeta se encuentre en un servidor remoto. Si "
-"está definido como «local_only» entonces sólo se mostrarán miniaturas en los "
-"sistemas de archivos locales. Si se establece a «never» entonces no se "
-"mostrarán miniaturas de las imágenes, sino que se mostrará un icono genérico."
+"una miniatura. Si se establece a \"always\" (siempre) entonces siempre se "
+"mostrarán miniaturas, aún cuando la carpeta se encuentre en un servidor "
+"remoto. Si está definido como \"local_only\" (sólo local) entonces sólo se "
+"mostrarán miniaturas en los sistemas de archivos locales. Si se establece a "
+"\"never\" (nunca) entonces no se mostrarán miniaturas de las imágenes, sino "
+"que se mostrará un icono genérico."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:111
 msgid ""
@@ -1254,11 +1259,11 @@ msgid ""
 "systems. If set to \"never\" then never bother to compute item counts."
 msgstr ""
 "Compensación de velocidad para cuando se muestre el número de elementos en "
-"una carpeta. Si se establece a «always» entonces siempre se contará el número "
-"de elementos, aún si la carpeta se encuentra en un servidor remoto. Si se "
-"establece a «local_only» entonces sólo se mostrará el número en los sistemas "
-"de archivos locales. Si se establece a «never» entonces nunca se contará el "
-"número de elementos."
+"una carpeta. Si se establece a \"always\" (siempre) entonces siempre se "
+"contará el número de elementos, aún si la carpeta se encuentra en un "
+"servidor remoto. Si se establece a \"local_only\" (sólo local) entonces sólo "
+"se mostrará el número en los sistemas de archivos locales. Si se establece a "
+"\"never\" (nunca) entonces nunca se contará el número de elementos."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:112
 msgid "Text Ellipsis Limit"
@@ -1276,7 +1281,8 @@ msgid ""
 "\", \"size\", \"type\", \"modification_date\", and \"emblems\"."
 msgstr ""
 "El criterio de ordenación de los elementos en la vista de icono. Los valores "
-"posibles son «name», «size», «type» «modification_date» y «emblems»."
+"posibles son \"name\" (nombre), \"size\" (tamaño), \"type\" (tipo), "
+"\"modification_date\" (fecha de modificación) y \"emblems\" (emblemas)."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:115
 msgid ""
@@ -1284,7 +1290,8 @@ msgid ""
 "\"name\", \"size\", \"type\", and \"modification_date\"."
 msgstr ""
 "El criterio de ordenación de los elementos en la vista de lista. Los valores "
-"posibles son «name», «size», «type»  y «modification_date»."
+"posibles son \"name\" (nombre), \"size\" (tamaño), \"type\" (tipo)  y "
+"\"modification_date\" (fecha de modificación)."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:116
 msgid "The default width of the side pane in new windows."
@@ -1301,8 +1308,8 @@ msgid ""
 "The format of file dates. Possible values are \"locale\", \"iso\", and "
 "\"informal\"."
 msgstr ""
-"El formato de las fechas de los archivos. Los valores posibles son «local», "
-"«iso» e «informal»."
+"El formato de las fechas de los archivos. Los valores posibles son \"locale"
+"\" (local), \"iso\" e \"informal\"."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:119
 msgid "The side pane view to show in newly opened windows."
@@ -2705,7 +2712,6 @@ msgstr "Hubo un error al crear el directorio en %F."
 
 #: ../libnautilus-private/nautilus-file.c:885
 #: ../libnautilus-private/nautilus-vfs-file.c:264
-#, c-format
 msgid "This file cannot be mounted"
 msgstr "Este archivo no se puede montar"
 
@@ -5229,7 +5235,6 @@ msgstr "Propiedades de %s"
 
 #: ../src/file-manager/fm-properties-window.c:1363
 #, c-format
-#| msgid "%s (%s)"
 msgctxt "MIME type description (MIME type)"
 msgid "%s (%s)"
 msgstr "%s (%s)"
