Handle GIcon types other than files and themed icons. Patch from David
2009-02-16  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-icon-info.c:
        (nautilus_icon_info_lookup):
	Handle GIcon types other than files and themed icons.
	Patch from David Zeuthen


svn path=/trunk/; revision=14952

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2009-02-16  Alexander Larsson  <alexl@redhat.com>
+
+        * libnautilus-private/nautilus-icon-info.c:
+        (nautilus_icon_info_lookup):
+	Handle GIcon types other than files and themed icons.
+	Patch from David Zeuthen
+
 2009-02-13  Cosimo Cecchi  <cosimoc@gnome.org>
 
 	* libnautilus-private/nautilus-file.c: (nautilus_file_mount):
