Update for release
2009-02-16  Alexander Larsson  <alexl@redhat.com>

	* NEWS:
	Update for release

	* configure.in:
	Bump version to 2.25.91



svn path=/trunk/; revision=14954

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2009-02-16  Alexander Larsson  <alexl@redhat.com>
+
+	* NEWS:
+	Update for release
+
+	* configure.in:
+	Bump version to 2.25.91
+
 2009-02-10  David Zeuthen  <davidz@redhat.com>
 
 	Don't use shadowed mounts.
