--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,10 @@
+Major changes in 2.25.91 are:
+* Use G_DEFINE_TYPE_* instead of hand-written types
+* fix: opening a new window restores minimised ones
+* fix renaming of desktop files
+* Handle new kinds of GIcons
+* Don't display shadowed mounts
+
 Major changes in 2.25.4 are:
 * Don't show desktop files from other desktops than Gnome on the desktop
 * Support crossfades of desktop backgrounds
