--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2009-02-16  Ilkka Tuohela <hile@iki.fi>
+
+	* fi.po: Updated Finnish translation.
+
 === nautilus 2.25.91 ===
 
 2009-02-16  Sweta Kothari  <swkothar@redhat.com>
