--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2009-02-17  Gil Forcada  <gforcada@gnome.org>
+
+	* ca.po: Updated Catalan translation by Joan Duran.
+
 2009-02-16  Ilkka Tuohela <hile@iki.fi>
 
 	* fi.po: Updated Finnish translation.
