--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2009-02-17  Sweta Kothari  <swkothar@redhat.com>
+
+	* gu.po: Committed Gujarati Translation.
+
 2009-02-17  Daniel Nylander <po@danielnylander.se>
 
 	* sv.po: Updated Swedish translation.
