--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2009-02-18  Sandeep Shedmake  <sshedmak@redhat.com>
+
+	* mr.po: Bug fix for #571898.
+
 2009-02-18  Changwoo Ryu  <cwryu@debian.org>
 
 	* ko.po: Updated Korean translation.
