Translation updated by Ivar Smolin
2009-02-18  Priit Laes  <plaes at svn dot gnome dot org>

	* et.po: Translation updated by Ivar Smolin

svn path=/trunk/; revision=14967

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2009-02-18  Priit Laes  <plaes at svn dot gnome dot org>
+
+	* et.po: Translation updated by Ivar Smolin
+
 2009-02-18  Sandeep Shedmake  <sshedmak@redhat.com>
 
 	* mr.po: Bug fix for #571898.
